--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,34 @@
+certifi==2025.4.26
+charset-normalizer==3.4.1
+contourpy==1.3.2
+cycler==0.12.1
 dnspython==2.7.0
+filelock==3.18.0
+fonttools==4.57.0
+fsspec==2025.3.2
+huggingface-hub==0.30.2
+idna==3.10
+kiwisolver==1.4.8
+matplotlib==3.10.1
+numpy==2.2.5
+packaging==25.0
+pandas==2.2.3
+pillow==11.2.1
 py4j==0.10.9.7
-pymongo==4.11.3
+pymongo==4.12.0
+pyparsing==3.2.3
 pyspark==3.5.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+safetensors==0.5.3
+seaborn==0.13.2
+six==1.17.0
+tokenizers==0.21.1
+tqdm==4.67.1
+transformers==4.51.3
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
